# vscode-ros2-sim-pause

./: .gitignore  .vscodeignore  CLAUDE.md  CONTRIBUTING.md  README.md  install  package-lock.json  package.json  tsconfig.json
src/: extension.ts
test_ws/src/sim_pause_test/: CMakeLists.txt  package.xml
test_ws/src/sim_pause_test/config/: bridge.yaml
test_ws/src/sim_pause_test/launch/: debug.launch.py  sim.launch.py  test.launch.py
test_ws/src/sim_pause_test/src/: pause_shim.cpp  test_node.cpp
