<?xml version="1.0"?>
<package format="3">
  <name>sim_pause_test</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 workspace for testing vscode-ros2-sim-pause</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
